--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: LifeEvents
 Type: Package
 Title: Life Events Data Tools
-Version: 0.1.0
+Version: 0.1.1
 Date: 2016-03-18
 Authors@R: person("Alexander", "Neumann",
     email = "alexander.neumann.science@gmail.com",
     role = c("aut", "cre"))
 Description: This package helps working with the Generation R life events data.
     It contains functions to filter life events depending on age of
-    occurence and influence, and to computes the number of life events
+    occurence and influence, and to compute the number of life events
     experienced.
 Depends:
     R (>= 3.2.4)
